{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 123,
  "lineage": "4b60508a-e27e-b24d-c1f9-5523f03c8c0c",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "MyTFNetInterface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/59cc06f0-2bbf-457b-a48a-d5811fe92883/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkInterfaces/MyTFNetInterface0",
            "internal_domain_name_suffix": "cju0gpowxz5utfjlolblgzgpfd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/59cc06f0-2bbf-457b-a48a-d5811fe92883/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/publicIPAddresses/MyTFPublicIP0",
                "subnet_id": "/subscriptions/59cc06f0-2bbf-457b-a48a-d5811fe92883/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/virtualNetworks/MyTFVnet/subnets/MyTFSubnet"
              }
            ],
            "location": "eastus",
            "name": "MyTFNetInterface0",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "myTFResourceGroup"
          },
          "dependencies": [
            "azurerm_public_ip.MyTFPublicIP",
            "azurerm_resource_group.myTFResourceGroup",
            "azurerm_subnet.MyTFSubnet",
            "azurerm_virtual_network.MyTFVnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/59cc06f0-2bbf-457b-a48a-d5811fe92883/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkInterfaces/MyTFNetInterface1",
            "internal_domain_name_suffix": "cju0gpowxz5utfjlolblgzgpfd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/59cc06f0-2bbf-457b-a48a-d5811fe92883/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/publicIPAddresses/MyTFPublicIP1",
                "subnet_id": "/subscriptions/59cc06f0-2bbf-457b-a48a-d5811fe92883/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/virtualNetworks/MyTFVnet/subnets/MyTFSubnet"
              }
            ],
            "location": "eastus",
            "name": "MyTFNetInterface1",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "myTFResourceGroup"
          },
          "dependencies": [
            "azurerm_public_ip.MyTFPublicIP",
            "azurerm_resource_group.myTFResourceGroup",
            "azurerm_subnet.MyTFSubnet",
            "azurerm_virtual_network.MyTFVnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "myTFNetSec",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/59cc06f0-2bbf-457b-a48a-d5811fe92883/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkSecurityGroups/SecurityGroup",
            "location": "eastus",
            "name": "SecurityGroup",
            "resource_group_name": "myTFResourceGroup",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.myTFResourceGroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "myTFSecRule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/59cc06f0-2bbf-457b-a48a-d5811fe92883/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/networkSecurityGroups/SecurityGroup/securityRules/myTFSecRule",
            "name": "myTFSecRule",
            "network_security_group_name": "SecurityGroup",
            "priority": 100,
            "protocol": "TCP",
            "resource_group_name": "myTFResourceGroup",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "22",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.myTFNetSec",
            "azurerm_resource_group.myTFResourceGroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "MyTFPublicIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/59cc06f0-2bbf-457b-a48a-d5811fe92883/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/publicIPAddresses/MyTFPublicIP0",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.179.82.233",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "MyTFPublicIP0",
            "resource_group_name": "myTFResourceGroup",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "Production"
            }
          },
          "dependencies": [
            "azurerm_resource_group.myTFResourceGroup"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/59cc06f0-2bbf-457b-a48a-d5811fe92883/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/publicIPAddresses/MyTFPublicIP1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.71.30.236",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "MyTFPublicIP1",
            "resource_group_name": "myTFResourceGroup",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "Production"
            }
          },
          "dependencies": [
            "azurerm_resource_group.myTFResourceGroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "MyTFSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/59cc06f0-2bbf-457b-a48a-d5811fe92883/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/virtualNetworks/MyTFVnet/subnets/MyTFSubnet",
            "name": "MyTFSubnet",
            "resource_group_name": "myTFResourceGroup",
            "virtual_network_name": "MyTFVnet"
          },
          "dependencies": [
            "azurerm_resource_group.myTFResourceGroup",
            "azurerm_virtual_network.MyTFVnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "MyTFVnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "3da36912-bed6-497f-952b-72c2b364cf2b",
            "id": "/subscriptions/59cc06f0-2bbf-457b-a48a-d5811fe92883/resourceGroups/myTFResourceGroup/providers/Microsoft.Network/virtualNetworks/MyTFVnet",
            "location": "eastus",
            "name": "MyTFVnet",
            "resource_group_name": "myTFResourceGroup",
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.myTFResourceGroup"
          ]
        }
      ]
    }
  ]
}